# current-song

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  config.toml.example
.github/workflows/: rust.yml
src/: main.rs
