[package]
name = "current-song"
version = "0.2.0"
authors = ["Michael Owens <michael@owens.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
state = { version = "0.4.2", features = ["tls"] }
config = "0.10.1"
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mdns-sd = "0.7.4"